--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
