--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "node-cache": "^5.1.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "redis": "^4.6.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
